# Peeler

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  license_header.txt  pyproject.toml
.github/actions/unit_tests/: action.yml
.github/workflows/: build.yaml  on_uv_release.yml  release.yaml  tests.yaml  unit_tests.yaml
peeler/: __init__.py  cli.py  schema.py  utils.py  uv_utils.py
peeler-json-schema/: README.md  __main__.py  pyproject.toml
peeler/command/: manifest.py  version.py  wheels.py
peeler/manifest/: write.py
peeler/pyproject/: __init__.py  manifest_adapter.py  update.py  validator.py
peeler/wheels/: download.py  lock.py
tests/peeler/: conftest.py  test_toml_utils.py
tests/peeler/command/: test_version.py
tests/peeler/data/: blender_manifest.toml  simple.toml  simple_with_comments.toml
tests/peeler/manifest/: test_validate.py  test_write.py
tests/peeler/pyproject/: conftest.py  test_manifest_adapter.py  test_parser.py  test_update.py  test_validator.py
tests/peeler/pyproject/data/: pyproject.toml  pyproject_minimal.toml  pyproject_no_manifest_table.toml  pyproject_no_peeler_table.toml  pyproject_peeler_table_empty.toml
tests/peeler/utils/: test__find_pyproject_file.py  test_normalize_platform.py  test_restore_file.py
tests/peeler/uv_utils/: test_check_uv_version.py
tests/peeler/wheels/: conftest.py  test_download.py  test_lock.py
tests/peeler/wheels/data/: lock_file_pylock.toml  pylock.test.toml  pyproject.toml
